# llvm-pass-plugin-skeleton

./: .gitignore  CMakeLists.txt  README.md  README.mir.md
BasePlugin/: CMakeLists.txt
BasePlugin/headers/: BasePlugin.h
BasePlugin/source/: BasePlugin.cpp  BasePluginRegister.cpp
pass-test/source/: main.c
